--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/mongodb-memory-server": "^2.3.0",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -54,6 +55,7 @@
     "jest": "^29.5.0",
     "jest-html-reporter": "^3.10.2",
     "jest-html-reporters": "^3.1.5",
+    "mongodb-memory-server": "^9.1.1",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
